# meta-grad-pytorch

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
docs/examples/: adaptivity.py  fashion_mnist.py  fashion_mnist_figs.py  loss.py  metagrad_vs_adagrad.py  metagrad_vs_adagrad_linear.py  metagrad_vs_adagrad_sin_nn.py  training_time.py
docs/examples/coordinate/: metagrad_vs_adagrad_linear.py  metagrad_vs_adagrad_sin_nn.py
docs/examples/full/: metagrad_vs_adagrad_linear.py  metagrad_vs_adagrad_sin_nn.py
docs/examples/sketched/: metagrad_vs_adagrad_linear.py  metagrad_vs_adagrad_sin_nn.py
metagrad/: __init__.py  metagrad.py
metagrad/coordinate/: metagrad.py
metagrad/full/: metagrad.py
metagrad/sketched/: metagrad.py
tests/: test_coordinate_metagrad.py  test_dimensions.py  test_training.py  test_where_update.py
